--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
     padding: 0;
-    overflow: hidden;
-}
-
-/* Fondo con gradiente animado */
-#background {
+    /* Se recomienda eliminar overflow:hidden para mejorar la experiencia en dispositivos móviles */
+  }
+  
+  /* Fondo con gradiente animado */
+  #background {
     position: fixed;
     width: 100vw;
     height: 100vh;
@@ -16,50 +16,37 @@ body {
     background: linear-gradient(45deg, #006847, #CE1126);
     background-size: 400% 400%;
     animation: cambioColor 15s ease infinite;
-}
-
-/* Animación de cambio de color */
-@keyframes cambioColor {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
-}
-
-.container-custom {
-    background-color: rgba(255, 255, 255, 0.9);
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-}
-
-/* Botones */
-.btn-primary {
+  }
+  
+  @keyframes cambioColor {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
+  }
+  
+  /* Estilos personalizados para botones */
+  .btn-primary {
     background-color: #006847;
     border-color: #006847;
-}
-.btn-primary:hover {
+  }
+  .btn-primary:hover {
     background-color: #CE1126;
     border-color: #CE1126;
-}
-
-.btn-outline-primary {
+  }
+  
+  .btn-outline-primary {
     color: #006847;
     border-color: #006847;
-}
-.btn-outline-primary:hover {
+  }
+  .btn-outline-primary:hover {
     background-color: #006847;
     color: white;
-}
-
-#logo-container {
+  }
+  
+  /* Estilo para el contenedor del logo */
+  #logo-container {
     border: 2px solid #006847;
-    padding: 15px;
     border-radius: 8px;
     background-color: #fdfdfd;
-}
+  }
+  
